# markdowner

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/markdowner/: audio.py  clean.py  cleaner.py  cli.py  emit.py  ingest.py  log.py  transcribe.py
src/markdowner/templates/: note.md.j2
tests/: test_cleaner.py  test_cli.py  test_emit.py  test_ingest.py  test_log.py  test_transcribe.py
