[project]
name = "markdowner"
version = "0.0.1"
description = "CLI що перетворює URL / audio / video у структуровані .md файли для LLM Wiki"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Vlad Zhuravel" }]
license = { text = "MIT" }
dependencies = [
    "yt-dlp>=2025.1.0",
    "typer>=0.12.0",
    "jinja2>=3.1.0",
]

[project.scripts]
markdowner = "markdowner.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/markdowner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
